; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_compare_name.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_compare_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, i8*, i32)* @compare_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_name(%struct.cache_entry* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.cache_entry*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.cache_entry* %0, %struct.cache_entry** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %9 = call i32 @ce_namelen(%struct.cache_entry* %8)
  %10 = icmp ne i32 %7, %9
  br i1 %10, label %19, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %5, align 8
  %13 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %14 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @memcmp(i8* %12, i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br label %19

19:                                               ; preds = %11, %3
  %20 = phi i1 [ true, %3 ], [ %18, %11 ]
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local i32 @ce_namelen(%struct.cache_entry*) #1

declare dso_local i64 @memcmp(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
